--- a/WeatherApp/src/main/java/com/mycompany/weatherapp/WeatherApp.form
+++ b/WeatherApp/src/main/java/com/mycompany/weatherapp/WeatherApp.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -116,6 +116,9 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchTextFieldActionPerformed"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="Preferences prefs = Preferences.userNodeForPackage(WeatherApp.class);&#xa;String preferredCity = prefs.get(CITY_PREFERENCE , &quot;New York&quot;);&#xa;searchTextField.setText(preferredCity);&#xa;getWeatherData();"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JTextField" name="temperatureTextField">
           <Properties>
